Fixed clicking on calendar  not showing datepicker

--- a/Week_06/Exercise/Solution/ui/src/app/pages/dashboard-page/blotter-view/blotter-view.component.css
+++ b/Week_06/Exercise/Solution/ui/src/app/pages/dashboard-page/blotter-view/blotter-view.component.css
@@ -30,6 +30,10 @@
     color: #7C7C7C;
 }
 
+.calendar-icon:focus {
+    outline: 0;
+}
+
 .calendar-icon > i {
     font-size: 18px;
 }
